...
                        Image(
                            bitmap = previewBitmap.asImageBitmap(),
                            contentDescription = "Page Preview",
                            contentScale = ContentScale.Fit,
                            modifier = Modifier
                                .aspectRatio(previewBitmap.width.toFloat() / previewBitmap.height) // Standard A4 ratio
                                .testTag("preview_image")
                        )
                    }
                } else if (documentSource != null) {
                    CircularProgressIndicator(
                        modifier = Modifier.size(36.dp),
                        color = MaterialTheme.colorScheme.primary,
...
